2003-07-24  Tim Jenness  <timj@jach.hawaii.edu>

	* Catalog.pm (_read_cluster): No longer use ra() and dec() methods
	to set the ra and dec (store the Astro::Coords object directly)

	* Star/Star.pm: ra($ra) and dec($dec) methods now deprecated.

2003-07-23  Tim Jenness  <timj@jach.hawaii.edu>

	* Star/Star.pm: Now uses Astro::Coords internally.

	* Catalog.pm: Now uses Astro::Coords internally. Switch to lexical
	filehandles.

2003-07-19  Alasdair Allan <aa@astro.ex.ac.uk> (version 2.1.3)

        * Catalog.pm: added patch by Brad Cavanagh to popstarbyid()
        
2003-07-15  Alasdair Allan <aa@astro.ex.ac.uk> (version 2.1.2)

        * Minor documentation tweaks
        
        * Added some example scripts to the distribution
          
2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>

        * Catalog.pm: Fixed bug in new _read_cluster() routine for
          instances where we're reading from a file.
          
2003-06-09  Alasdair Allan <aa@astro.ex.ac.uk>

        * Fixed test scripts for Astro::Catalog::SuperCOSMOS so that
          they fail gracefully if Astro::Aladin isn't installed.
          
        * Astro::Catalog module patched to take an ARK catalogue via
          a scalar rather than from a file. For backwards compatibility
          reasons Astro::Catalog( Cluster => $file ) still refers to
          a serialised version, whereas Astro::Catalog( Scalar => $file ) 
          refers to a scalar holding a string that is an ARK Cluster
          catalogue. This isn't optimal but I don't particularly want
          to break the exisiting (extensive) codebase.

2003-02-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * Astro::Catalog now wraps SuperCOSMOS catalogue using 
          the Astro::Aladin module. Some example scripts using this
          new module and the Astro::DSS module are included in the
          distribution. NB: This isn't intended to be used seriously
          by anyone, its not even a sub-optimal way of going about